# privacy-preserving-federated-fraud-detection

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: main.yaml  smoke.yaml
docs/: DATASETS.md  HARDWARE.md  REPRODUCIBILITY.md
scripts/: generate_figures.py  run_phase_a.py  run_phase_b1.py  run_phase_b2.py  run_phase_c.py  run_phase_d.py  smoke_test.py
src/fraud_fl/: __init__.py  attacks.py  ctgan_dp.py  data.py  federated.py  metrics.py  models.py  plotting.py  utils.py
tests/: __init__.py  test_imports.py  test_unit.py
